--- a/app/src/docs/asciidoc/main.adoc
+++ b/app/src/docs/asciidoc/main.adoc
@@ -12,9 +12,7 @@ La concurrence sur le marché des applications de gestion de notes est significa
 
 Cependant, SuperNote se distingue par son approche axée sur la ligne de commande, offrant une interface rapide et directe pour la gestion des notes, en particulier pour les utilisateurs à l'aise avec cette méthode d'interaction. Sa flexibilité pour s'intégrer avec diverses plates-formes de prise de notes existantes, ainsi qu'avec des environnements de développement, vise à fournir une expérience de prise de notes unifiée et fluide pour les utilisateurs exigeants en matière de productivité.
 
-== Modèles
-
-= Installation de SuperNote
+== Installation de SuperNote
 
 == Prérequis
 
@@ -103,149 +101,6 @@ Pour utiliser SuperNote, voici quelques commandes courantes que vous pouvez exé
 
 Pour plus d'informations sur l'utilisation de SuperNotes, regardez le README.
 
-Synchroniser les notes avec Google Drive
-
 == Diagramme de classe 
 
-----
-@startuml
-interface Note {
-    +getContent(): String
-    +setContent(content: String): void
-}
-
-class TextNote {
-    -content: String
-    -tag: String
-    +getContent(): String
-    +setContent(content: String): void
-    +getTag(): String
-    +setTag(tag: String): void
-}
-
-class ImageNote {
-    -content: byte[]
-    -tag: String
-    +getContent(): byte[]
-    +setContent(content: byte[]): void
-    +getTag(): String
-    +setTag(tag: String): void
-}
-
-interface NoteFactory {
-    +createNote(): Note
-}
-
-class TextNoteFactory {
-    +createNote(): Note
-}
-
-class ImageNoteFactory {
-    +createNote(): Note
-}
-
-interface INoteManager {
-    +addNote(Note: note): void
-    +deleteByTag(Strin: tag): void
-}
-
-class NoteManager implements INoteManager {
-    +addNote(Note: note): void
-    +deleteByTag(Strin: tag): void
-}
-
-interface FileHandler {
-    +exportPdfFile(String: filePath): void 
-    +exportPdfFileUsingFilter(String: filePath, String: filter): void
-}
-
-class FileManager implements FileHandler {
-    +exportPdfFile(String: filePath): void 
-    +exportPdfFileUsingFilter(String: filePath, String: filter): void
-    +exportPdf(String: filePath, List<Note>: result): void
-}
-
-class DriveQuickstart {
-  -APPLICATION_NAME: String
-  -JSON_FACTORY: JsonFactory
-  -TOKENS_DIRECTORY_PATH: String
-  -SCOPES: List<String>
-  -CREDENTIALS_FILE_PATH: String
-  +getCredentials(HTTP_TRANSPORT: NetHttpTransport): Credential
-  +uploadFile(filePath1: String, result: List<Note>): boolean
-}
-
-class CommandLineInterface {
-    +parseCommand(command: String): void
-    +displayHelp(): void
-}
-
-interface DBManager {
-    +createNotesTable(): void
-    +addTextNote(content: String, tag: String): void
-    +addImageNote(imageBytes: byte[], tag: String): void
-    +deleteNoteByTag(tag: String): void
-    +getAllNotes(): ArrayList<Note> 
-    +getAllNotesByTag(tag: String): ArrayList<Note> 
-    +getAllNotesLike(contentMotif: String): ArrayList<Note> 
-}
-
-class SQLiteDBManager implements DBManager {
-    +createNotesTable(): void
-    +addTextNote(content: String, tag: String): void
-    +addImageNote(imageBytes: byte[], tag: String): void
-    +deleteNoteByTag(tag: String): void
-    +getAllNotes(): ArrayList<Note>
-    +getAllNotesByTag(tag: String): ArrayList<Note>
-    +getAllNotesLike(contentMotif: String): ArrayList<Note>
-    +connect(): void
-    +getConnection(): void
-}
-
-interface NotionApiManager{
-    +createNotionPage(String: parentPageId, String: propertiesJson): String
-    +retrievePageContent(String: pageId): String
-    +updatePageProperties(String: pageId, String: propertiesJson): String
-    }
-
-class NotionAPI implements NotionApiManager{
-    +createNotionPage(String: parentPageId, String: propertiesJson): String
-    +retrievePageContent(String: pageId): String
-    +updatePageProperties(String: pageId, String: propertiesJson): String
-    }
-
-interface NotionManager{
-    +extractNewPageId(String newPage): String
-    +extractNewPageId(String newPage): String
-    +extractPageTitle(String newPage): String
-}
-
-class NotionPageManager implements NotionManager{
-    +extractNewPageId(String newPage): String
-    +extractNewPageId(String newPage): String
-    +extractPageTitle(String newPage): String
-    }  
-
-Note <|.. TextNote
-Note <|.. ImageNote
-
-NoteFactory <|.. TextNoteFactory
-NoteFactory <|.. ImageNoteFactory
-FileManager ..> DBManager
-NoteManager ..> DBManager
-
-NoteFactory ..> Note : creates
-NoteManager ..> Note : manages
-FileHandler ..> Note : handles
-NotionAPI ..> Note : manage
-NotionPageManager ..> NotionAPI
-
-CommandLineInterface ..> NoteManager : sendsCommands
-CommandLineInterface ..> NotionApiManager : sendsCommands
-FileManager ..> DriveQuickstart: uses
-
-@enduml
-=======
-
-
-----
+image::models/model.png[Diagramme de Classe]
